modules/gdscript/tests/scripts/parser/errors/range_with_zero_step.gd
func test() -> void:
	for i: int in range(1, 2, 0):
		pass
